# active-adaptation

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
active_adaptation/: __init__.py  cli.py  helpers.py  registry.py  rollout_io.py
active_adaptation/assets/: __init__.py  asset_cfg.py  dummy_objects.py  humanoid.py  quadruped.py  quadruped_manipulator.py
active_adaptation/assets/humanoids/: __init__.py  g1.py
active_adaptation/assets/quadrupeds/: __init__.py  a2.py  a2_manipulator.py  b2.py  b2_manipulatior.py  go2.py
active_adaptation/envs/: __init__.py  adapters.py  env_base.py
active_adaptation/envs/backends/: TEACHME.md
active_adaptation/envs/backends/isaac/: adapter.py  env.py
active_adaptation/envs/backends/isaaclab/: __init__.py  adapter.py  env.py
active_adaptation/envs/backends/mjlab/: adapter.py  env.py  viewer.py
active_adaptation/envs/backends/motrix/: __init__.py  adapter.py  env.py  mjcf.py
active_adaptation/envs/backends/motrixsim/: AGENTS.md  NOTES.md  RESULTS.md  __init__.py  adapter.py  env.py  motrixsim.py  motrixsim_sim.py
active_adaptation/envs/backends/mujoco/: env.py  mujoco.py
active_adaptation/envs/mdp/: __init__.py  base.py
active_adaptation/envs/mdp/actions/: __init__.py  base.py  composite.py  joint.py  marker.py  write.py
active_adaptation/envs/mdp/commands/: base.py  loco_manip.py  locomotion.py  motion_tracking.py  spline_command.py
active_adaptation/envs/mdp/commands/locomanip/: TEACHME.md  __init__.py  loco_manip_busket.py  loco_manip_object.py  loco_manip_sparse.py
active_adaptation/envs/mdp/observations/: base.py  body.py  common.py  contact.py  extero.py  joint.py
active_adaptation/envs/mdp/randomizations/: __init__.py  actuator.py  base.py  collision.py  common.py
active_adaptation/envs/mdp/rewards/: __init__.py  base.py  gait.py  joint.py  locomotion.py
active_adaptation/envs/mdp/terminations/: base.py  common.py
active_adaptation/envs/tasks/game/: command.py  rewards.py
active_adaptation/envs/terrain/: __init__.py  wrapper.py
active_adaptation/envs/utils/: __init__.py  api.py  ground.py
active_adaptation/learning/: __init__.py  sac.py
active_adaptation/learning/modules/: __init__.py  common.py  ensemble.py  vecnorm.py
active_adaptation/learning/offpolicy/: README.md  __init__.py  buffer.py  distribution.py  distributional.py  network.py  objectives.py  reward_normalization.py  sac.py  td3.py  utils.py
active_adaptation/learning/ppo/: common.py  ppo.py  ppo_amp.py  ppo_base.py  ppo_dic.py  ppo_facet.py  ppo_go2.py  ppo_him.py  ppo_himp.py  ppo_ji.py  ppo_rnn.py  ppo_symaug.py
active_adaptation/learning/utils/: distributed.py  dormancy.py  opt.py
active_adaptation/project_loading/: discovery.py
active_adaptation/utils/: helpers.py  isaac_keyboard.py  math.py  profiling.py  video_recorder.py  wandb.py  warp.py
cfg/: eval.yaml  play.yaml  rollout.yaml  train.yaml
cfg/task/A2/: A2LocoFlat.yaml  A2LocoManip.yaml  A2LocoManipObject.yaml  A2LocoManipObjectScripted.yaml  A2LocoManipSparse.yaml
cfg/task/B2/: B2Z1Loco.yaml  B2Z1LocoManip.yaml  B2Z1LocoManipObjectScripted.yaml
cfg/task/G1/: G1LocoFlat.yaml
cfg/task/Go2/: Go2LocoFlat.yaml
projects/cfg/task/: Quadruped.yaml
projects/facet/facet_commands/: impedance.py  impedance_manip.py  rewards.py
projects/facet/task/facet/: B1Z1.yaml  Go2Force.yaml  Go2ForceHIM.yaml
projects/metamorph/task/: Quadruped.yaml
scripts/: TEACHME.md  _viz_live.py  _viz_live_env.py  _viz_live_render.py  _viz_native.py  _viz_record.py  _viz_render.py  eval.py  eval_run.py  launch_ddp.sh  launch_multinode_tmux.sh  play.py  relabel.py  rollout.py  rollout_manager_nicegui.py  test_motrix.py  train_amp.py  train_ppo.py  viz.py
