[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "active_adaptation"
version = "0.4.2"
authors = [
    {name = "btx0424@SUSTech"}
]
keywords = ["robotics", "rl"]
requires-python = ">=3.11,<3.13"
dependencies = [
    "setproctitle",
    "hydra-core",
    "omegaconf",
    "wandb",
    "moviepy",
    "av",
    "einops",
    "termcolor",
    "pygame",
    "onnxruntime",
    "onnxscript",
    "jaxtyping",
    "tensordict==0.8.*",
    "torchrl==0.8.*",
    "torch==2.7.0",
    "mujoco",
    "huggingface_hub>=0.30",
    "linuxfd",
    "pdbpp",
    "importlib-metadata==8.7.1",
    "pdbpp==0.12.0.post1",
]

[project.scripts]
aa-discover-projects = "active_adaptation.cli:aa_discover_projects"
aa-list-tasks = "active_adaptation.cli:aa_list_tasks"
aa-pull = "active_adaptation.cli:aa_pull"

[project.entry-points."active_adaptation.projects"]
facet = "projects.facet"
mimic = "projects.mimic"
metamorph = "projects.metamorph"

[tool.setuptools.packages]
find = { where = ["."], include = [
    "active_adaptation*",
    "scripts*",
    "projects.facet*",
    "projects.mimic*",
    "projects.metamorph*"
    ] }

[tool.setuptools.package-data]
"*" = ["**/*"]

[tool.pyright]
# typeCheckingMode = "strict"
reportIncompatibleMethodOverride = "error"
