[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "active_adaptation"
version = "0.7.0"
authors = [
    {name = "btx0424@SUSTech"}
]
keywords = ["robotics", "rl"]
requires-python = ">=3.11,<3.13"
dependencies = [
    "setproctitle",
    "hydra-core",
    "omegaconf",
    "wandb",
    "moviepy",
    "av",
    "einops",
    "termcolor",
    "pygame",
    "onnxruntime",
    "onnxscript",
    "jaxtyping",
    "tensordict",
    "torchrl",
    "torch",
    "imageio",
    "linuxfd",
    "pdbpp",
    "scipy",
    "trimesh",
]

[project.scripts]
aa-create-project = "active_adaptation.cli:aa_create_project"
aa-discover-projects = "active_adaptation.cli:aa_discover_projects"
aa-project = "active_adaptation.cli:aa_project"
aa-list-tasks = "active_adaptation.cli:aa_list_tasks"
aa-pull = "active_adaptation.cli:aa_pull"
aa-recent-commands = "active_adaptation.cli:aa_recent_commands"

[project.entry-points."active_adaptation.projects"]
facet = "projects.facet"
mimic = "projects.mimic"
metamorph = "projects.metamorph"

[tool.setuptools.packages]
find = { where = ["."], include = [
    "active_adaptation*",
    "scripts*",
    "projects.facet*",
    "projects.mimic*",
    "projects.metamorph*"
    ] }

[tool.setuptools.package-data]
"*" = ["**/*"]

[tool.pyright]
# typeCheckingMode = "strict"
reportIncompatibleMethodOverride = "error"
